[gd_scene load_steps=26 format=2]

[ext_resource path="res://main/Main.gd" type="Script" id=1]
[ext_resource path="res://addons/imjp94.yafsm/src/states/State.gd" type="Script" id=2]
[ext_resource path="res://addons/imjp94.yafsm/src/states/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://addons/imjp94.yafsm/src/transitions/Transition.gd" type="Script" id=4]
[ext_resource path="res://addons/imjp94.yafsm/src/StateMachinePlayer.gd" type="Script" id=5]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/BooleanCondition.gd" type="Script" id=6]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/Condition.gd" type="Script" id=7]
[ext_resource path="res://addons/imjp94.yafsm/src/conditions/ExpressionCondition.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.941176, 0.964706, 0.941176, 1 )
border_width_top = 10
border_width_bottom = 10

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="Resource" id=3]
script = ExtResource( 2 )
__meta__ = {
"graph_offset": Vector2( 108, -120 )
}
name = "Entry"

[sub_resource type="Resource" id=5]
script = ExtResource( 2 )
__meta__ = {
"graph_offset": Vector2( 808, -20 )
}
name = "Game"

[sub_resource type="Resource" id=22]
script = ExtResource( 2 )
__meta__ = {
"graph_offset": Vector2( 613.5, -20 )
}
name = "MainMenu"

[sub_resource type="Resource" id=23]
script = ExtResource( 2 )
__meta__ = {
"graph_offset": Vector2( 243, -120 )
}
name = "Loading"

[sub_resource type="Resource" id=24]
script = ExtResource( 2 )
__meta__ = {
"graph_offset": Vector2( 248, -20 )
}
name = "Intro"

[sub_resource type="Resource" id=25]
script = ExtResource( 4 )
from = "Entry"
to = "Loading"
conditions = {
}
priority = 0

[sub_resource type="Resource" id=21]
script = ExtResource( 7 )
name = "main_menu"

[sub_resource type="Resource" id=8]
script = ExtResource( 4 )
from = "Game"
to = "MainMenu"
conditions = {
"main_menu": SubResource( 21 )
}
priority = 0

[sub_resource type="Resource" id=20]
script = ExtResource( 7 )
name = "start_game"

[sub_resource type="Resource" id=7]
script = ExtResource( 4 )
from = "MainMenu"
to = "Game"
conditions = {
"start_game": SubResource( 20 )
}
priority = 0

[sub_resource type="Resource" id=28]
script = ExtResource( 6 )
name = "intro_loaded"
comparation = 0
value = true

[sub_resource type="Resource" id=26]
script = ExtResource( 4 )
from = "Loading"
to = "Intro"
conditions = {
"intro_loaded": SubResource( 28 )
}
priority = 0

[sub_resource type="Resource" id=29]
script = ExtResource( 8 )
name = "main_menu_loaded and intro_ended"

[sub_resource type="Resource" id=27]
script = ExtResource( 4 )
from = "Intro"
to = "MainMenu"
conditions = {
"main_menu_loaded and intro_ended": SubResource( 29 )
}
priority = 0

[sub_resource type="Resource" id=9]
script = ExtResource( 3 )
name = ""
states = {
"Entry": SubResource( 3 ),
"Game": SubResource( 5 ),
"Intro": SubResource( 24 ),
"Loading": SubResource( 23 ),
"MainMenu": SubResource( 22 )
}
transitions = {
"Entry": {
"Loading": SubResource( 25 )
},
"Game": {
"MainMenu": SubResource( 8 )
},
"Intro": {
"MainMenu": SubResource( 27 )
},
"Loading": {
"Intro": SubResource( 26 )
},
"MainMenu": {
"Game": SubResource( 7 )
}
}

[node name="Main" type="Node"]
script = ExtResource( 1 )

[node name="Loading" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Loading"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.133333, 0.137255, 0.137255, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Loading"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -60.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="Loading/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 40.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
percent_visible = false

[node name="StateMachines" type="Node" parent="."]

[node name="MainStateMachine" type="Node" parent="StateMachines"]
script = ExtResource( 5 )
state_machine = SubResource( 9 )

[node name="IntroContainer" type="Node" parent="."]

[node name="MainMenuContainer" type="Node" parent="."]

[connection signal="transited" from="StateMachines/MainStateMachine" to="." method="_on_MainStateMachine_transited"]
